# spo-lab3

./: .gitignore  CMakeLists.txt  README.md  main.c  net.c  util.c
client/: client.c  client_net.c
includes/: client.h  net.h  util.h
server/: server.c  server_net.c
